# Matrices

./: .gitignore  LICENSE  README.md  basis_functions.py  dg_matrices.py  matrices.py  pyproject.toml  stp_matrices.py  test.py  writer.py
.github/workflows/: main.yml  pages.yml
seissol_matrices/: basis_functions.py  dg_matrices.py  dr_matrices.py  energy.py  json_io.py  nodal_boundary.py  quadrature.py  stp_matrices.py  xml_io.py
src/quad_rules/: Dunavant.pkl  Dunavant.py  DunavantRaw.py  GaussJacobi.py  JaskowiecSukumar.pkl  JaskowiecSukumar.py  JaskowiecSukumarRaw.py  QuadRule.py  Quadrature.py  README.md  RawDataHandler.py  WitherdenVincentTet.pkl  WitherdenVincentTet.py  WitherdenVincentTetRaw.py  WitherdenVincentTri.pkl  WitherdenVincentTri.py  WitherdenVincentTriRaw.py  quadrature.py
src/seissol_matrices/: __init__.py  base.py  basis_functions.py  dg_matrices.py  dr_matrices.py  energy.py  generate.py  json_io.py  nodal_boundary.py  plasticity.py  plasticity_matrices.py  quad_points.py  quadrature.py  stp_matrices.py  vtk_points.py  xml_io.py
src/seissol_matrices/nodal/: nodes_1.txt
src/seissol_matrices/plasticity/: nb_1.txt  nb_2.txt  nb_3.txt  nb_4.txt  nb_5.txt  nb_6.txt  nb_7.txt  nb_8.txt  stroud.py
test/: basis_1d.npy  basis_2d.npy  basis_3d.npy
tests/: helper.py  test.json  test_basis_functions.py  test_dr.py  test_energy.py  test_json_io.py  test_mass.py  test_matrices.py  test_nodal_boundary.py  test_plasticity.py  test_quad_points.py  test_resample.py  test_stp.py  test_xml_io.py
