[tool.poetry]
name = "seissol-matrices"
version = "0.1.0"
description = ""
authors = [
    "Sebastian Wolf <wolf.sebastian@in.tum.de>",
    "Lukas Krenz <lukas.krenz@in.tum.de>",
]
readme = "README.md"
packages = [{include = "seissol_matrices"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.0"
quadpy = "^0.16.22"
orthopy = "^0.8.97"
ndim = "^0.1.18"

[tool.poetry.group.dev.dependencies]
nose2 = "^0.12.0"
coverage = "^7.1.0"
requests = "^2.28.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
